# AI-Omniscient-Architect

./: .dockerignore  .env.example  .flake8  .gitignore  .vercelignore  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  IMPROVEMENTS.md  LEARNING_QUICKSTART.md  LEARNING_SYSTEM.md  OMNISCIENT_ARCHITECT_README.md  PHASE1_REVIEW.md  PYPI_SETUP.md  QUICK_START.md  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker-manage.ps1  env.example  modularity_docker_review.md  omniscient_architect_ai.py  pyproject.toml  pytest.ini  requirements.txt  run_web_app.py  setup.ps1  vercel.json  web_app.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
api/: README.md  index.py  requirements.txt
docs/: README.md
examples/: README.md  README_RAG_IMPROVEMENTS.md  analysis_report.md  analyze_self.py  cache_example.py  check_scores.py  evaluate_rag_folder.py  ingest_handbook.py  query_handbook.py  test_ollama_embed.py  test_simple_rag.py
roadmap/: Approch2.md  FINAL_PRODUCT_FEEDBACK.md  PLATFORM_DEVELOPMENT_PLAN.md  REVAMP_PLAN.md
scripts/: demo_knowledge_persistence.py  dev_install.ps1  dev_install.sh  health-check.py  init-db.sql  test_datalake_analysis.py  test_e2e_rag.py  test_local_analysis.py  test_packages.py  test_rag_improvement.py  test_repo_analysis.py
src/langchain_community/: __init__.py  chat_models.py
src/langchain_core/: __init__.py  language_models.py
src/omniscient_architect/: __init__.py  agent_output_schema.py  agent_registry.py  agents.py  analysis.py  cli.py  config.py  github_client.py  llm_utils.py  logging_config.py  models.py  output_parsers.py  prompts.py  reporting.py  web_app.py
src/omniscient_architect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omniscient_architect/agents/: __init__.py  alignment.py  architecture.py  base.py  efficiency.py  reliability.py
src/omniscient_architect/core/: __init__.py  analysis.py
src/omniscient_architect/prompts/: __init__.py  loaders.py  templates.py
src/omniscient_architect/tools/: __init__.py  clustering.py  complexity.py  file_scanner.py
src/omniscient_architect/utils/: __init__.py  cache.py  ingestion.py  io.py  logging.py
tests/: conftest.py  test_agent_parsing.py  test_agents.py  test_basic.py  test_cache.py  test_cli_smoke.py  test_rag.py
tests/fixtures/sample_repo/: README.md  hello.py
