[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniscient-architect"
version = "0.2.0"
description = "AI-powered code review and development assistant"
readme = "OMNISCIENT_ARCHITECT_README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Data Science Analytical Handbook Team", email = "team@example.com"},
]
maintainers = [
    {name = "AI Omniscient Architect Team", email = "ai-team@example.com"},
]
keywords = ["code-review", "ai", "development", "analysis", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "ollama>=0.2.0",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "PyGitHub>=2.1.0",
    "tree-sitter>=0.20.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
analysis = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
]

[project.scripts]
omniscient-architect = "omniscient_architect.cli:main"

[project.urls]
Homepage = "https://github.com/moshesham/AI-Omniscient-Architect"
Repository = "https://github.com/moshesham/AI-Omniscient-Architect"
Issues = "https://github.com/moshesham/AI-Omniscient-Architect/issues"
Documentation = "https://github.com/moshesham/AI-Omniscient-Architect#readme"

[tool.setuptools]
packages = ["omniscient_architect"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
omniscient_architect = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]