[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniscient-architect"
version = "0.2.0"
description = "AI-powered code review and architecture analysis platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Omniscient Architect Team", email = "ai-team@example.com"}
]
maintainers = [
    {name = "AI Omniscient Architect Team", email = "ai-team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Review",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["code-review", "architecture", "ai", "llm", "analysis", "rag", "agents"]

# Meta-package: depends on sub-packages
# For local dev, use: pip install -e packages/core -e packages/llm ...
# After publishing: pip install omniscient-architect
dependencies = [
    "omniscient-core>=0.1.0",
    "omniscient-llm>=0.1.0",
    "omniscient-agents>=0.1.0",
    "omniscient-tools>=0.1.0",
    "omniscient-github>=0.1.0",
    "omniscient-api>=0.1.0",
]

[project.optional-dependencies]
# Individual packages for selective installation
core = ["omniscient-core>=0.1.0"]
llm = ["omniscient-llm>=0.1.0"]
agents = ["omniscient-agents>=0.1.0"]
tools = ["omniscient-tools>=0.1.0"]
github = ["omniscient-github>=0.1.0"]
api = ["omniscient-api>=0.1.0"]
rag = ["omniscient-rag>=0.1.0"]

# Feature groups
minimal = [
    "omniscient-core>=0.1.0",
    "omniscient-llm>=0.1.0",
]
analysis = [
    "omniscient-core>=0.1.0",
    "omniscient-llm>=0.1.0",
    "omniscient-agents>=0.1.0",
    "omniscient-tools>=0.1.0",
]
full = [
    "omniscient-core>=0.1.0",
    "omniscient-llm>=0.1.0",
    "omniscient-agents>=0.1.0",
    "omniscient-tools>=0.1.0",
    "omniscient-github>=0.1.0",
    "omniscient-api>=0.1.0",
    "omniscient-rag>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

# All extras
all = [
    "omniscient-architect[full,dev]",
]

[project.scripts]
# CLI entry points from sub-packages
omniscient-llm = "omniscient_llm.cli:main"
omniscient-api = "omniscient_api.cli:main"

[project.urls]
Homepage = "https://github.com/moshesham/AI-Omniscient-Architect"
Documentation = "https://github.com/moshesham/AI-Omniscient-Architect#readme"
Repository = "https://github.com/moshesham/AI-Omniscient-Architect"
Issues = "https://github.com/moshesham/AI-Omniscient-Architect/issues"
Changelog = "https://github.com/moshesham/AI-Omniscient-Architect/blob/main/CHANGELOG.md"

# This is a meta-package with no source code of its own
# All code lives in packages/*/src/
[tool.setuptools]
packages = []

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", ".venv", "venv", "node_modules", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests", "packages/*/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -ra -q --strict-markers"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["packages"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
